# monitoring_practice

./: .env.example  .gitignore  Dockerfile  README.md  asgi.py  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
alembic/: env.py
alembic/versions/: 66f611155b53_init_tables.py
app/: main.py
app/api/endpoints/: auth.py  message.py  user.py
app/core/: auth.py  config.py  dependencies.py  error_handlers.py  exceptions.py  logging_config.py  security.py
app/db/: database.py
app/db/repositories/: message.py  user.py
app/models/: __init__.py  message.py  user.py
app/schemas/: auth.py  message.py  user.py
app/scripts/: load_test.py
app/services/: kafka_service.py  message_consumer.py  multiple_consumers.py
monitoring/: prometheus.yml
monitoring/db/: Dockerfile
monitoring/grafana_dashboards/: PostgreSQL Overview (Postgres_exporter)-1745410199397.json  cAdvisor Docker Insights-1745410163675.json
