[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
authors = [
    { name = "Vladyslav Lazoryk", email = "lazorkinv@gmail.com" },
]
description = "FastAPI Kafka App"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["app"]
